apps/ai/lmstudio-proxy/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lmstudio
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
  hostnames:
    - lmstudio.${SECRET_INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: lmstudio
          port: 1234
